@@ -6,21 +6,24 @@
 # section of the Checker Framework manual:
 # https://checkerframework.org/manual/#whole-program-inference
 
+set -eo pipefail
+# not set -u, because this script checks variables directly
+
 DEBUG=0
 # To enable debugging, uncomment the following line.
 # DEBUG=1
 
-while getopts "o:i:u:t:g:" opt; do
+while getopts "o:i:t:g:s" opt; do
   case $opt in
     o) OUTDIR="$OPTARG"
        ;;
     i) INLIST="$OPTARG"
        ;;
-    u) GITHUB_USER="$OPTARG"
-       ;;
     t) TIMEOUT="$OPTARG"
        ;;
     g) GRADLECACHEDIR="$OPTARG"
+       ;;
+    s) SKIP_OR_DELETE_UNUSABLE="skip"
        ;;
     \?) # the remainder of the arguments will be passed to DLJC directly
        ;;
@@ -30,7 +33,15 @@ done
 # Make $@ be the arguments that should be passed to dljc.
 shift $(( OPTIND - 1 ))
 
-echo "Starting wpi-many.sh. The output of this script is purely informational."
+SCRIPTDIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null 2>&1 && pwd )"
+SCRIPTPATH="${SCRIPTDIR}/wpi-many.sh"
+
+# Report line numbers when the script fails, from
+# https://unix.stackexchange.com/a/522815 .
+trap 'echo >&2 "Error - exited with status $? at line $LINENO of wpi-many.sh:";
+         pr -tn ${SCRIPTPATH} | tail -n+$((LINENO - 3)) | head -n7' ERR
+
+echo "Starting wpi-many.sh."
 
 # check required arguments and environment variables:
 
@@ -103,12 +114,12 @@ if [ "x${INLIST}" = "x" ]; then
     exit 4
 fi
 
-if [ "x${GITHUB_USER}" = "x" ]; then
-    GITHUB_USER="${USER}"
-fi
-
 if [ "x${GRADLECACHEDIR}" = "x" ]; then
   GRADLECACHEDIR=".gradle"
+fi
+
+if [ "x${SKIP_OR_DELETE_UNUSABLE}" = "x" ]; then
+  SKIP_OR_DELETE_UNUSABLE="delete"
 fi
 
 JAVA_HOME_BACKUP="${JAVA_HOME}"
@@ -117,8 +128,6 @@ export JAVA_HOME="${JAVA11_HOME}"
 ### Script
 
 echo "Finished configuring wpi-many.sh. Results will be placed in ${OUTDIR}-results/."
-
-SCRIPTDIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null 2>&1 && pwd )"
 
 export PATH="${JAVA_HOME}/bin:${PATH}"
 
@@ -174,27 +183,12 @@ do
            continue
         fi
     else
-        rm -rf "${REPO_NAME}/dljc-out"
+        rm -rf -- "${REPO_NAME}/dljc-out"
     fi
 
     cd "./${REPO_NAME}" || (echo "command failed in $(pwd): cd ./${REPO_NAME}" && exit 5)
 
     git checkout "${HASH}"
-
-    OWNER=$(echo "${REPO}" | cut -d / -f 4)
-
-    if [ "${OWNER}" = "${GITHUB_USER}" ]; then
-        ORIGIN=$(echo "${REPOHASH}" | awk '{print $3}')
-        # Piping to /dev/null is usually a bad idea.
-        # However, in this case it is intentional: the goal is to
-        # suppress error output, because there is no real harm done if
-        # the `unannotated` remote is not added - it's just a convenience
-        # for data analysis. But, running this script twice in a row on projects
-        # whose owner is the github user always causes an error on this line,
-        # because the `unannotated` remote is already set. The output is piped
-        # to /dev/null to suppress that error.
-        git remote add unannotated "${ORIGIN}" &> /dev/null
-    fi
 
     REPO_FULLPATH=$(pwd)
 
@@ -203,17 +197,26 @@ do
     RESULT_LOG="${OUTDIR}-results/${REPO_NAME_HASH}-wpi.log"
     touch "${RESULT_LOG}"
 
-    /bin/bash -x "${SCRIPTDIR}/wpi.sh" -d "${REPO_FULLPATH}" -t "${TIMEOUT}" -g "${GRADLECACHEDIR}" -- "$@" &> "${RESULT_LOG}" &> "${OUTDIR}-results/wpi-out" || cat "${OUTDIR}-results/wpi-out"
-    rm -f "${OUTDIR}-results/wpi-out"
+    if [ -f "${REPO_FULLPATH}/.cannot-run-wpi" ]; then
+      if [ "${SKIP_OR_DELETE_UNUSABLE}" = "skip" ]; then
+        echo "Skipping ${REPO_NAME_HASH} because it has a .cannot-run-wpi file present, indicating that an earlier run of WPI failed. To try again, delete the .cannot-run-wpi file and re-run the script."
+      fi
+      # the repo will be deleted later if SKIP_OR_DELETE_UNUSABLE is "delete"
+    else
+      # it's important that </dev/null is on this line, or wpi.sh might consume stdin, which would stop the larger wpi-many loop early
+      /bin/bash -x "${SCRIPTDIR}/wpi.sh" -d "${REPO_FULLPATH}" -t "${TIMEOUT}" -g "${GRADLECACHEDIR}" -- "$@" &> "${OUTDIR}-results/wpi-out" </dev/null
+    fi
 
     cd "${OUTDIR}" || exit 5
 
-    # If the result is unusable (i.e. wpi cannot run),
-    # we don't need it for data analysis and we can
-    # delete it right away.
     if [ -f "${REPO_FULLPATH}/.cannot-run-wpi" ]; then
-        echo "Deleting ${REPO_NAME_HASH} because WPI could not be run."
-        rm -rf "./${REPO_NAME_HASH}"
+        # If the result is unusable (i.e. wpi cannot run),
+        # we don't need it for data analysis and we can
+        # delete it right away.
+        if [ "${SKIP_OR_DELETE_UNUSABLE}" = "delete" ]; then
+          echo "Deleting ${REPO_NAME_HASH} because WPI could not be run."
+          rm -rf -- "./${REPO_NAME_HASH}"
+        fi
     else
         cat "${REPO_FULLPATH}/dljc-out/wpi.log" >> "${RESULT_LOG}"
         TYPECHECK_FILE=${REPO_FULLPATH}/dljc-out/typecheck.out
@@ -234,17 +237,20 @@ do
 
     cd "${OUTDIR}" || exit 5
 
-done <"${INLIST}"
+done < "${INLIST}"
 
 ## This section is here rather than in wpi-summary.sh because counting lines can be moderately expensive.
 ## wpi-summary.sh is intended to be run while a human waits (unlike this script), so this script
 ## precomputes as much as it can, to make wpi-summary.sh faster.
 
-results_available=$(grep -Zvl -e "no build file found for" \
+# this command is allowed to fail, because if no projects returned results then none
+# of these expressions will match, and we want to enter the special handling for that
+# case that appears below
+results_available=$(grep -vl -e "no build file found for" \
     -e "dljc could not run the Checker Framework" \
     -e "dljc could not run the build successfully" \
     -e "dljc timed out for" \
-    "${OUTDIR}-results/"*.log)
+    "${OUTDIR}-results/"*.log || true)
 
 echo "${results_available}" > "${OUTDIR}-results/results_available.txt"
 
@@ -255,18 +261,30 @@ if [ -z "${results_available}" ]; then
   echo "End of log files."
 else
   if [[ "$OSTYPE" == "linux-gnu"* ]]; then
-    listpath=$(mktemp /tmp/cloc-file-list-XXX.txt)
+    listpath=$(mktemp "/tmp/cloc-file-list-$(date +%Y%m%d-%H%M%S)-XXX.txt")
     # Compute lines of non-comment, non-blank Java code in the projects whose
     # results can be inspected by hand (that is, those that WPI succeeded on).
+    # Don't match arguments like "-J--add-opens=jdk.compiler/com.sun.tools.java".
     # shellcheck disable=SC2046
-    grep -oh "\S*\.java" $(cat "${OUTDIR}-results/results_available.txt") | sort | uniq > "${listpath}"
+    grep -oh "\S*\.java" $(cat "${OUTDIR}-results/results_available.txt") | sed "s/'//g" | grep -v '^\-J' | sort | uniq > "${listpath}"
 
-    cd "${SCRIPTDIR}/.do-like-javac" || exit 5
+    if [ ! -s "${listpath}" ] ; then
+        echo "${listpath} has size zero"
+        ls -l "${listpath}"
+        echo "results_available = ${results_available}"
+        echo "---------------- start of ${OUTDIR}-results/results_available.txt ----------------"
+        cat "${OUTDIR}-results/results_available.txt"
+        echo "---------------- end of ${OUTDIR}-results/results_available.txt ----------------"
+        exit 1
+    fi
+
+    mkdir -p "${SCRIPTDIR}/.scc"
+    cd "${SCRIPTDIR}/.scc" || exit 5
     wget -nc "https://github.com/boyter/scc/releases/download/v2.13.0/scc-2.13.0-i386-unknown-linux.zip"
     unzip -o "scc-2.13.0-i386-unknown-linux.zip"
 
     # shellcheck disable=SC2046
-    "${SCRIPTDIR}/.do-like-javac/scc" --output "${OUTDIR}-results/loc.txt" \
+    "${SCRIPTDIR}/.scc/scc" --output "${OUTDIR}-results/loc.txt" \
         $(< "${listpath}")
 
     rm -f "${listpath}"
@@ -277,4 +295,4 @@ fi
 
 export JAVA_HOME="${JAVA_HOME_BACKUP}"
 
-echo "Exiting wpi-many.sh. The output of this script was purely informational. Results were placed in ${OUTDIR}-results/."
+echo "Exiting wpi-many.sh. Results were placed in ${OUTDIR}-results/."
